Invoices, Reservations added

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   % include('templates/navigation.tpl')
   <div class="container">
   <p>
-  <h3>Hotel Management System intended for Boutique hotels</h3>
+  <h3>Hotel Management for Boutique hotels</h3>
   </p>
   <p>
   A boutique hotel is a type of hotel that feels small, intimate, and quaint. 
