--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -61,7 +61,7 @@ function ToggleAction() {
   }
 }
 </script>
-<a class="button" href="new_room"><span class="pln">New</span></a> 
+<a class="button" href="/new_room"><span class="pln">New</span></a> 
    <span class="pln"><a href="javascript:ToggleAction()">&#9881;</a> 
    <select id="action" onchange="SelectAction(this)" style="max-width : 150px;" >
     <option value="">Actions</option>
