--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -65,8 +65,8 @@ function ToggleAction() {
    <span class="pln"><a href="javascript:ToggleAction()">&#9881;</a> 
    <select id="action" onchange="SelectAction(this)" style="max-width : 150px;" >
     <option value="">Actions</option>
-    <option value="edit">Edit room</option>
-    <option value="delete">Delete room</option>
+    <option value="edit">View/Edit</option>
+    <option value="delete">Delete</option>
    </select>
    </span>
   <!--<button onclick="getSelectedRow()">Edit selected</button>-->
