--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,13 @@
   % include('templates/header.tpl',page_title='Boutique Hotel Management')
   % include('templates/navigation.tpl')
+  <!--
   <div class="container">
-  <p>
+  <div class="row">
+  <div class="column" column-90>
+  -->
+  <div style="margin-left:5%">
   <h3>Hotel Management for Boutique hotels</h3>
-  </p>
+  <div style="width:40%">
   <p>
   A boutique hotel is a type of hotel that feels small, intimate, and quaint. 
   It typically has less than 100 rooms and offers guests an ultra-personal service. 
@@ -23,5 +27,8 @@
   </p>
   <a href="https://www.hospitalitynet.org/editorial/4010409.html" target="_blank">Read more: The Definition of Boutique Hotels</a>
   <hr>
+  </div>
+  </div>
+  </div>
   % include('templates/footer.tpl')
   
