Hotel image added

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,27 +1,35 @@
   % include('templates/header.tpl',page_title='Boutique Hotel Management')
   % include('templates/navigation.tpl')
-  <div style="margin-left:5%">
-  <h3>Hotel Management for Boutique hotels</h3>
-  <div style="width:40%">
-  <p>
-  A boutique hotel is a type of hotel that feels small, intimate, and quaint. 
-  It typically has less than 100 rooms and offers guests an ultra-personal service. 
-  Boutique hotel stays true to the local culture.
-  </p>
-  <p>
-  Boutique hotels are characterized by their intimate size, stylish design, and emphasis on individualized service. 
-  Unlike large hotel chains, which often adhere to standardized décor and amenities, boutique hotels pride themselves 
-  on their distinctive personality and attention to detail.
-  </p>
-  <p>
-  Boutique hotels first began appearing in the 1980s in major cities such as London, New York, and San Francisco. 
-  In recent times, boutique hotels have grown in popularity, corresponding with the general public's increased interest in individualized service. 
-  Many hotel chains have begun to focus on creating subsidiary hotels to establish smaller, boutique-style hotels,or in acquiring previously independent boutique hotels.
-  Boutique hotels are commonly found in the city centers of London, New York City, Miami, New Orleans, and Los Angeles. 
-  They are also found in resort destinations and may be furnished with amenities such as spas, yoga, and painting classes.
-  </p>
-  <a href="https://www.hospitalitynet.org/editorial/4010409.html" target="_blank">Read more: The Definition of Boutique Hotels</a>
-  <hr>
+  <div class="container">
+  <div class="row">
+  <div class="column column-50"><span class="pln">
+
+    <h3>Hotel Management for Boutique hotels</h3>
+    <p>
+    A boutique hotel is a type of hotel that feels small, intimate, and quaint. 
+    It typically has less than 100 rooms and offers guests an ultra-personal service. 
+    </p>
+    <p>
+    Boutique hotels are characterized by their intimate size, stylish design, and emphasis on individualized service. 
+    Unlike large hotel chains, which often adhere to standardized décor and amenities, boutique hotels pride themselves 
+    on their distinctive personality and attention to detail.
+    </p>
+    <p>
+    Boutique hotels first began appearing in the 1980s in major cities such as London, New York, and San Francisco. 
+    In recent times, boutique hotels have grown in popularity, corresponding with the general public's increased interest in individualized service. 
+    Many hotel chains have begun to focus on creating subsidiary hotels to establish smaller, boutique-style hotels,or in acquiring previously independent boutique hotels.
+    Boutique hotels are commonly found in the city centers of London, New York City, Miami, New Orleans, and Los Angeles. 
+    They are also found in resort destinations and may be furnished with amenities such as spas, yoga, and painting classes.
+    </p>
+    <a href="https://www.hospitalitynet.org/editorial/4010409.html" target="_blank">Read more: The Definition of Boutique Hotels</a>
+    <hr>
+    </span>
+  </div>
+  <div class="column column-50 column-offset-10" style="margin-top:50px">
+  <span class="pln">
+  <img src="../static/img/hotel.jpg" width="1200px"/>
+  <p>Boutique hotel stays true to the local culture.</p>
+  </span>
   </div>
   </div>
   </div>
