--- a/templates/index.html
+++ b/templates/index.html
@@ -10,19 +10,20 @@
   <div class="column column-50">
     
     <p>
-   Welcome to Boutique Hotel En Passant, your ultimate destination for a luxurious stay in the heart of Podgorica’s city center. 
-   With 30 beautifully designed rooms, our hotel offers the perfect blend of comfort and style, making it the ideal choice for both business and leisure travelers.
+    Welcome to Boutique Hotel En Passant, the premier choice for a luxurious retreat in the heart of Podgorica. 
+    Featuring 30 exquisitely designed rooms, our hotel seamlessly combines  comfort and elegance, 
+    making it an excellent option for both business and leisure travelers.
     </p>
     <p>
-    The friendly and welcoming team of Hotel En Passant is dedicated to ensuring that you have an unforgettable stay with us, 
-    and we pride ourselves on providing exceptional service that goes above and beyond your expectations.
+    Our warm and attentive staff is committed to making your stay memorable, and we take great pride in 
+    delivering service that exceeds your expectations.
     </p>
     <hr>
      % include('templates/footer.tpl')
   </div>
   <div class="column column-30 column-offset-10" style="margin-top:1px">
     <img id="theImage" src="../static/img/hotel1.jpg" width="1200px"/>
-    <p style="allign:middle">En Passant hotel stays true to the local culture.</p>
+    <p style="allign:middle">Hotel En Passant is deeply rooted in local culture.</p>
   </div>
   </div>
   </div>
