--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
   </div>
   <div class="column column-30 column-offset-10" style="margin-top:1px">
     <img id="theImage" src="../static/img/hotel1.jpg" width="1200px"/>
-    <p style="allign:middle">Hotel En Passant is deeply rooted in local culture.</p>
+    <p style="allign:middle">Hotel En Passant is deeply integrated into the local culture.</p>
   </div>
   </div>
   </div>
