--- a/templates/search_room.tpl.html
+++ b/templates/search_room.tpl.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="../static/css/milligram.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
- <div class="container">
-        <div class='row'><h2>Serach for a free room</h2></div>
+ <div class="container" style="margin-top:20;">
+        <div class='row'><h2>Find free room</h2></div>
         <div class='row'>
                   <div style="padding-bottom: 18px;">Arrival date<span style="color: red;"> *</span><br/>
                   <input type="text" id="arrival_date" name="arrival_date" style="max-width : 250px;" class="form-control"/>
