--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <div><h1>Hotel {{hotel_name}}</h1></div>
   </div>
   <div class="row">
-     % include('templates/navigation.tpl')
+  % include('templates/navigation.tpl')
   </div>
   <div class="row">
   <div class="column column-50">
@@ -46,6 +46,6 @@ ImageSwitch=new Array();
         console.log(r);
         document.getElementById("theImage").setAttribute("src", ImageSwitch[r])
     }
-    //swapImage();
+    swapImage();
   </script>
   
